fix: Correct Vertex AI model history construction

--- a/.env
+++ b/.env
@@ -9,5 +9,12 @@ DEVELOPMENT_MODE='True'
 # Points to your LIVE Render PostgreSQL database
 DATABASE_URL='postgresql://recruitapp_db_user:t9TosAQxTBpb7bwFKQLmd5lTJHXYCn4W@dpg-d350cjt6ubrc73cpnrd0-a.ohio-postgres.render.com/recruitapp_db'
 
-# Your Gemini API Key for the agent
+# Your Gemini API Key for authentication
 GEMINI_API_KEY='AIzaSyDz7JeMFWg6gVsTK0_VrfsjP29304hwTec'
+
+# --- ADD THESE LINES FOR VERTEX AI ---
+# Your specific Google Cloud Project ID
+GOOGLE_CLOUD_PROJECT_ID='recruitapp-473021' #<-- Replace with your actual Project ID
+
+# The location for the Vertex AI services
+GOOGLE_CLOUD_LOCATION='us-central1'
