FEAT: Implement asynchronous architecture with Celery/Redis

--- a/.env
+++ b/.env
@@ -10,11 +10,14 @@ DEVELOPMENT_MODE='True'
 DATABASE_URL='postgresql://recruitapp_db_user:t9TosAQxTBpb7bwFKQLmd5lTJHXYCn4W@dpg-d350cjt6ubrc73cpnrd0-a.ohio-postgres.render.com/recruitapp_db'
 
 # Your Gemini API Key for authentication
-GEMINI_API_KEY='AIzaSyDz7JeMFWg6gVsTK0_VrfsjP29304hwTec'
+GEMINI_API_KEY='AIzaSyBnz-6lBrptTfWEOpHDj3S3XfbrLhFME9A'
 
-# --- ADD THESE LINES FOR VERTEX AI ---
+# --- Vertex AI Settings ---
 # Your specific Google Cloud Project ID
-GOOGLE_CLOUD_PROJECT_ID='recruitapp-473021' #<-- Replace with your actual Project ID
-
+GOOGLE_CLOUD_PROJECT_ID='recruitapp-473021'
 # The location for the Vertex AI services
 GOOGLE_CLOUD_LOCATION='us-central1'
+
+# --- ADD THIS LINE FOR WEB SEARCH ---
+# Your Google Programmable Search Engine ID
+GOOGLE_SEARCH_ENGINE_ID='d11c1cb95cd14409f'
