--- a/render.yaml
+++ b/render.yaml
@@ -3,23 +3,21 @@ services:
   - name: recruitapp-redis
     type: redis
     plan: free
-    # --- FIX: Added required ipAllowList property ---
-    ipAllowList: [] # Allows connections from other Render services
+    ipAllowList: []
 
   # 2. The Django Web Server (Gunicorn)
   - name: recruitapp-web
-    # --- FIX: Changed 'env' to 'runtime' ---
     runtime: python
     type: web
     plan: starter
-    buildCommand: |
-      pip install -r requirements.txt
-      python manage.py migrate
-    startCommand: "gunicorn recruitapp_core.wsgi"
+    # --- FIX: Removed 'migrate' from the build command ---
+    buildCommand: "pip install -r requirements.txt"
+    # --- FIX: Added 'migrate' to the start command ---
+    startCommand: "python manage.py migrate && gunicorn recruitapp_core.wsgi"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: recruitapp-db # Use the name of your existing Postgres database
+          name: recruitapp-db
           property: connectionString
       - key: CELERY_BROKER_URL
         fromService:
@@ -31,7 +29,6 @@ services:
 
   # 3. The Celery Background Worker
   - name: recruitapp-worker
-    # --- FIX: Changed 'env' to 'runtime' ---
     runtime: python
     type: worker
     plan: starter
@@ -40,7 +37,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: recruitapp-db # Use the name of your existing Postgres database
+          name: recruitapp-db
           property: connectionString
       - key: CELERY_BROKER_URL
         fromService:
