--- a/render.yaml
+++ b/render.yaml
@@ -1,19 +1,21 @@
 services:
-  # --- NEW: Define the Database as part of the Blueprint ---
-  - name: recruitapp-db
-    # --- FIX: Changed 'psql' to 'postgres' ---
-    type: postgres
-    plan: free # Can be upgraded later
+  # --- FIX: Renamed DB and used correct 'psql' type ---
+  - name: recruitapp-blueprint-db
+    type: psql
+    region: ohio
+    plan: free
 
   # 1. The Redis instance for Celery
   - name: recruitapp-redis
     type: redis
+    region: ohio
     plan: free
     ipAllowList: []
 
   # 2. The Django Web Server (Gunicorn)
   - name: recruitapp-web
     runtime: python
+    region: ohio
     type: web
     plan: starter
     buildCommand: |
@@ -23,7 +25,8 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: recruitapp-db # This now refers to the DB defined above
+          # --- FIX: Point to the new unique database name ---
+          name: recruitapp-blueprint-db
           property: connectionString
       - key: CELERY_BROKER_URL
         fromService:
@@ -36,6 +39,7 @@ services:
   # 3. The Celery Background Worker
   - name: recruitapp-worker
     runtime: python
+    region: ohio
     type: worker
     plan: starter
     buildCommand: "pip install -r requirements.txt"
@@ -43,7 +47,8 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: recruitapp-db # This also refers to the DB defined above
+          # --- FIX: Point to the new unique database name ---
+          name: recruitapp-blueprint-db
           property: connectionString
       - key: CELERY_BROKER_URL
         fromService:
