--- a/render.yaml
+++ b/render.yaml
@@ -1,22 +1,23 @@
-services:
-  # Define the Database as part of the Blueprint
-  - name: recruitapp-blueprint-db
-    type: psql
-    region: ohio
+# A top-level key for defining PostgreSQL databases
+databases:
+  - name: recruitapp-db # A unique name for the new database
     plan: free
+    region: ohio
 
-  # The Redis instance for Celery
+# A separate top-level key for all other services
+services:
+  # Redis is a "service", not a "database"
   - name: recruitapp-redis
     type: redis
     region: ohio
     plan: free
     ipAllowList: []
 
-  # The Django Web Server (Gunicorn)
+  # The Django Web Server
   - name: recruitapp-web
+    type: web
     runtime: python
     region: ohio
-    type: web
     plan: starter
     buildCommand: |
       pip install -r requirements.txt
@@ -25,11 +26,10 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: recruitapp-blueprint-db
+          name: recruitapp-db # This now correctly refers to the DB in the 'databases' block
           property: connectionString
       - key: CELERY_BROKER_URL
         fromService:
-          type: redis
           name: recruitapp-redis
           property: connectionString
       - key: PYTHON_VERSION
@@ -37,79 +37,19 @@ services:
 
   # The Celery Background Worker
   - name: recruitapp-worker
+    type: worker
     runtime: python
     region: ohio
-    type: worker
-    plan: starter # You may need to upgrade this plan if memory issues persist
+    plan: starter
     buildCommand: "pip install -r requirements.txt"
-    # --- FIX: Added concurrency limit to prevent memory crashes ---
     startCommand: "celery -A recruitapp_core worker --loglevel=info --concurrency=3"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: recruitapp-blueprint-db
+          name: recruitapp-db
           property: connectionString
       - key: CELERY_BROKER_URL
         fromService:
-          type: redis
-          name: recruitapp-redis
-          property: connectionString
-      - key: PYTHON_VERSION
-        value: "3.13.7"
-  # --- FIX: Renamed DB and used correct 'psql' type ---
-  - name: recruitapp-blueprint-db
-    type: psql
-    region: ohio
-    plan: free
-
-  # 1. The Redis instance for Celery
-  - name: recruitapp-redis
-    type: redis
-    region: ohio
-    plan: free
-    ipAllowList: []
-
-  # 2. The Django Web Server (Gunicorn)
-  - name: recruitapp-web
-    runtime: python
-    region: ohio
-    type: web
-    plan: starter
-    buildCommand: |
-      pip install -r requirements.txt
-      python manage.py collectstatic --no-input
-    startCommand: "python manage.py migrate && gunicorn recruitapp_core.wsgi"
-    envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          # --- FIX: Point to the new unique database name ---
-          name: recruitapp-blueprint-db
-          property: connectionString
-      - key: CELERY_BROKER_URL
-        fromService:
-          type: redis
-          name: recruitapp-redis
-          property: connectionString
-      - key: PYTHON_VERSION
-        value: "3.13.7"
-
-  # 3. The Celery Background Worker
-  - name: recruitapp-worker
-    runtime: python
-    region: ohio
-    type: worker
-    plan: starter
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "celery -A recruitapp_core worker --loglevel=info"
-    envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          # --- FIX: Point to the new unique database name ---
-          name: recruitapp-blueprint-db
-          property: connectionString
-      - key: CELERY_BROKER_URL
-        fromService:
-          type: redis
           name: recruitapp-redis
           property: connectionString
       - key: PYTHON_VERSION
