--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,34 @@
-# Environment Variables & Secrets
-.env
+Translations
+*.mo
+*.pot
 
-# Virtual Environment
-venv/
-
-# Local Database
-db.sqlite3
-
-# Log files
+Django stuff:
 *.log
-debug.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
 
-# Python Cache
-__pycache__/
-*.pyc
+Scrapy stuff:
+.scrapy
+
+Sphinx documentation
+docs/_build/
+
+Jupyter Notebook
+.ipynb_checkpoints
+
+Virtual Environment
+venv/
+env/
+.env
+.venv
+
+IDE / Editor specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+OS generated files
+.DS_Store
+Thumbs.db
