fix: Use python -m celery for Render worker compatibility

--- a/render.yaml
+++ b/render.yaml
@@ -41,7 +41,7 @@ services:
     region: oregon
     plan: starter
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "celery -A recruitapp_core worker --loglevel=info --concurrency=3"
+    startCommand: "python -m celery -A recruitapp_core worker --loglevel=info --concurrency=3"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
